@@ -1,8 +1,8 @@
-## $Id: Makefile.am,v 1.205 2008/06/04 08:39:23 c_anthon Exp $
+## $Id: Makefile.am,v 1.206 2008/06/06 15:43:01 c_anthon Exp $
 
 ACLOCAL_AMFLAGS = -I m4
 
-AM_CPPFLAGS = -DDATADIR='"$(datadir)"' -DPKGDATADIR='"$(datadir)/gnubg"'
+AM_CPPFLAGS = -DDOCDIR='"$(docdir)"' -DDATADIR='"$(datadir)"' -DPKGDATADIR='"$(datadir)/gnubg"'
 
 SUBDIRS = lib doc met po m4 xpm sounds board3d textures scripts flags fonts non-src .
 
